--- a/src/BlazorApp/wwwroot/sample-data/projects.json
+++ b/src/BlazorApp/wwwroot/sample-data/projects.json
@@ -10,9 +10,9 @@
     "url": "https://github.com/Soel-Attala/University-Backend"
   },
   {
-    "title": "Sales System",
-    "description": "We developed the backend of a sales system using ASP.NET Core 6 and SQL server.",
-    "url": "https://github.com/Soel-Attala/Sales-System"
+    "title": "ASP.NET Core - REACT",
+    "description": "This repositorie contains a few project using ASP.NET Core, SQL Server, and React JS",
+    "url": "https://github.com/Soel-Attala/ASP.NETCore-React"
   },
   {
     "title": "A little projects in unity 3D",
