--- a/src/BlazorApp/wwwroot/sample-data/projects.json
+++ b/src/BlazorApp/wwwroot/sample-data/projects.json
@@ -10,9 +10,9 @@
     "url": "https://github.com/Soel-Attala/ASP.NETCore-React/tree/main/TaskApp"
   },
   {
-    "title": "Sales System",
-    "description": "A sales system using ASP.NET Core, SQL Server, and N layer architecture",
-    "url": "https://github.com/Soel-Attala/ASP.NETCore-React/tree/main/SalesSystem"
+    "title": "Coderhouse Final",
+    "description": "A backend of ecommerce system in C# and ASP.NET with layer architecture. This backend is for a frontend that coderhouse provided us in React JS",
+    "url": "https://github.com/Soel-Attala/ProyectoFinal-CoderHouse"
   },
   {
     "title": "A little projects in unity 3D",
