--- a/src/BlazorApp/wwwroot/sample-data/projects.json
+++ b/src/BlazorApp/wwwroot/sample-data/projects.json
@@ -1,8 +1,8 @@
 [
   {
-    "title": "Contact App",
-    "description": "A little app to save contacts with ASP:NET Core and React JS",
-    "url": "https://github.com/Soel-Attala/ASP.NETCore-React/tree/main/ContactsApp"
+    "title": "ASP.NETCore - React JS",
+    "description": "A little projects with ASP.NET Core and React JS",
+    "url": "https://github.com/Soel-Attala/ASP.NETCore-React"
   },
   {
     "title": "Task App",
